# MagangIRIS-OpenCV

./: CMakeLists.txt  tugas1.cpp  tugas2.cpp
